<resources>
    <string name="app_name">Ferreter</string>

    <!--    Texts for displaying balance-->
    <string name="default_balance_value">$0.00</string>
    <string name="test_balance_value">$10,000,000.00</string>

    <!--    Accounts Page-->
    <string name="accounts_assets_header">Assets</string>
    <string name="accounts_liabilities_header">Liabilities</string>
    <string name="accounts_total_header">Total</string>
    <string name="accounts_add">Add</string>
    <string name="accounts_delete">Delete</string>

    <!--    Add Account Page-->
    <string name="add_account_type">Type</string>
    <string name="add_account_name">Name</string>
    <string name="add_account_amount">Amount</string>
    <string name="add_account_description">Description</string>
    <string name="add_account_save">Save</string>
</resources>
